# progress

./: .env.example  .gitignore  Cargo.toml  dev.sh  index.html
.cargo/: config.toml
old_game/: Cargo.toml  README.md  index.html
old_game/src/: bot.rs  grid.rs  input.rs  jobs.rs  main.rs  pathfinding.rs  power.rs  rendering.rs  scouts.rs  ui.rs  world.rs
src/: grid.rs  interact.rs  main.rs  movement.rs  pathfinding.rs  renderable.rs  reservation.rs  spawn.rs
src/entities/: bot.rs  mod.rs  scrap.rs
src/render/: atlas.rs  chunks.rs
src/sim/: behavior.rs  buildings.rs  combat.rs  conditions.rs  debug.rs  entities.rs  game_state.rs  grid.rs  jobs.rs  movement.rs  notifications.rs  pathfinding.rs  power_levels.rs  resources.rs  scouts.rs  speed_modifiers.rs  zones.rs
src/sim/entities/: mod.rs
src/sim/entities/ai_core/: components.rs  systems.rs
src/sim/entities/bots/: components.rs  systems.rs
src/sim/entities/scouts/: components.rs  mod.rs  systems.rs
src/ui/: hud.rs  input.rs
