[package]
name = "progress"
version = "0.3.0"
edition = "2026"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_ui",
    "bevy_sprite",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "default_font",
    "png",
    "webgl2",
] }
rand = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["rng-getrandom"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
